there is lot white space in heightwise between the sections make sure re

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,7 +106,7 @@
         @apply max-w-[88rem] mx-auto px-4;
     }
     section {
-        @apply py-20;
+        @apply py-16;
     }
     .bg-sap-gradient {
         background-color: #00073D;
